--- a/course-project-starting-setup/public/src/css/feed.css
+++ b/course-project-starting-setup/public/src/css/feed.css
@@ -29,3 +29,30 @@
   display: block;
   margin: 10px auto;
 }
+
+.shared-moment-card.mdl-card {
+  margin: 10px auto;
+  width: 400px;
+}
+
+@media (min-width: 600px) {
+  .shared-moment-card.mdl-card {
+    width: 400px;
+  }
+}
+
+.shared-moment-card .mdl-card__title {
+  height: 140px;
+}
+
+@media (min-height: 700px) {
+  .shared-moment-card .mdl-card__title {
+    height: 160px;
+  }
+}
+
+@media (min-height: 1000px) {
+  .shared-moment-card .mdl-card__title {
+    height: 200px;
+  }
+}
